Fixed code after unit test failures after refactor.